<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewWorkoutActivity"
    tools:showIn="@layout/app_bar_new_workout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWorkoutYear">

        <LinearLayout
            android:id="@+id/displayExercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <EditText
        android:id="@+id/inputWorkoutDay"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rectangle"
        android:hint="Day"
        android:inputType="number"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEx" />

    <EditText
        android:id="@+id/inputWorkoutMonth"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rectangle"
        android:hint="Month"
        android:inputType="number"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/inputWorkoutDay"
        app:layout_constraintTop_toBottomOf="@+id/addEx" />

    <EditText
        android:id="@+id/inputWorkoutYear"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rectangle"
        android:hint="Year"
        android:inputType="number"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/inputWorkoutMonth"
        app:layout_constraintTop_toBottomOf="@+id/addEx" />

    <EditText
        android:id="@+id/inputWorkoutTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rectangle"
        android:hint="Time (min)"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/inputWorkoutYear"
        app:layout_constraintTop_toBottomOf="@+id/addEx" />

    <Button
        android:id="@+id/initialSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/save"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="64dp"
        android:text="@string/cancel"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Add exercises to this workout"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/addsymboldescription"
        android:maxWidth="48dp"
        android:maxHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/addsymbol"
        app:layout_constraintBottom_toTopOf="@+id/initialSaveButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@mipmap/addsymbol"
        tools:srcCompat="@mipmap/addsymbol" />

    <TextView
        android:id="@+id/workoutErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>